# optical-network

./: .gitignore  README.md  main_offline.py  main_online.py  pyproject.toml  sub_exp.py
config/: environment.yml  main_offline.yaml  main_online.yaml
config/selector/: kdp.yaml  ksp.yaml  kspasc.yaml  nodepair_clst.yaml  path_clst.yaml
data/input/graphs/: EURO16.pickle  JP25.pickle  JPN12.pickle  JPN25.pickle  KLI2018.pickle  N6.pickle  N6S9.pickle  NSF.pickle  RING.pickle  US24.pickle
data/network/: EURO16.csv  GRID2x2.csv  GRID2x3.csv  GRID3x3.csv  GRID3x4.csv  GRID4x4.csv  JPN12.csv  JPN25.csv  N6.csv  N6S9.csv  NSFNET.csv  RING.csv  US24.csv  meta.csv
data/network/position/: EURO16.csv  (+3 more)
docs/: kBP.md  kDP.md
docs/RSA_PATH_CHANNEL/: RSA_PATH_CHANNEL.tex
notebook/: 2024-09-27_new-method.ipynb  clustering.ipynb  network.ipynb  paths.ipynb  shceduling_society.ipynb  test.ipynb
src/: _utils.py  config.py  files.py  graph.py  namespaces.py  run.py  temporary.py
src/demands/: demands.py
src/experiments/: compare_ksp.ipynb
src/optimize/: optimizer.py  params.py  result.py  wang_RSSA_ILP.py
src/paths/: __init__.py  _factory.py  _registry.py  _utils.py  analysis.py  base.py  calc_metrics.py  generate.py  kdp.py  ksp.py  kspasc.py  nodepair_clst.py  path_clst.py
src/preprocess/: preprocessor.py
src/rsa/: _utils.py  demands.py  online.py  optical_network.py
src/utils/: graph.py  paths.py
test/: graph_test.py  mori.py  path_check.ipynb  rsa_main_test.py  test.py  wang.py  wang_rsa.py
utils/: files.py  formatter.py  namespaces.py  network.py
(+214 files in other folders)
